--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -107,8 +107,8 @@ pipeline {
                     input message: "Promote to Staging?"
                 }
                 script {
-			openshift.withCluster() {
-			openshift.tag("${DEV_PROJECT}/books:latest", "${STAGE_PROJECT}/books:stage"
+		    openshift.withCluster() {
+		    openshift.tag("${DEV_PROJECT}/books:latest", "${STAGE_PROJECT}/books:stage")
 		  }
 		}
             }
