--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         DEV_PROJECT = "dstasuik-books-dev"
         STAGE_PROJECT = "dstasuik-books-stage"
         APP_GIT_URL = "https://github.com/cdneclipse/DO288-apps"
-        NEXUS_SERVER = ${RHT_OCP4_NEXUS_SERVER}
+        NEXUS_SERVER = "${RHT_OCP4_NEXUS_SERVER}"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
